--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     Raisins
   </div>
 
-  <a class="flatironLink" href="flatironschool.com">Flatiron School</a>
+  <a class="flatironLink" href="http://flatironschool.com">Flatiron School</a>
   <div id="box">
   </div>
   <form>
