--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <head>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
   <script src="js/methods.js"></script>
 </head>
 <body>
-  <p id="bacon"> Bacon ipsum dolor amet ball tip shankle corned beef meatball, ham tongue beef jerky salami. Meatball ham hock pork, pancetta ball tip t-bone doner shank kevin ground round flank sausage turducken filet mignon. Cupim shank tail, kevin pancetta andouille bresaola tenderloin corned beef sausage. Tail t-bone flank tenderloin, brisket landjaeger kielbasa venison.
-  </p>
+
+  <p id="bacon"> Bacon ipsum dolor amet ball tip shankle corned beef meatball, ham tongue beef jerky salami. Meatball ham hock pork, pancetta ball tip t-bone doner shank kevin ground round flank sausage turducken filet mignon. Cupim shank tail, kevin pancetta andouille bresaola tenderloin corned beef sausage. Tail t-bone flank tenderloin, brisket landjaeger kielbasa venison.</p>
+
   <p>Puppy kitty ipsum dolor sit good dog yawn bed play dog fish swimming fish aquatic drool crate parrot chirp. Right Paw yawn small animals warm treats biscuit house train. Teeth bird food food Mittens bird seed groom slobber Snowball. Pet Food ID tag feeder lick chew grooming aquarium drool string Spike paws mouse commands food running shake Mittens scratch. Tongue house train purr carrier vaccination grooming pet gate ball leash. Drool fluffy pet food yawn dog cage bed shake bedding kitten nest wagging. Dog House parakeet biscuit kitten Fido stripes lazy dog maine coon cat pet supplies bed whiskers bark tabby lazy cat feathers behavior. </p>
 
   <img id="hidden" src="https://s3.amazonaws.com/learn-verified/smiling-dolphin.jpg" alt="smiling dolphin 2">
@@ -20,10 +22,12 @@
   </div>
 
   <a class="flatironLink" href="flatironschool.com">Flatiron School</a>
-  <div id="box">
-  </div>
+
+  <div id="box"></div>
+
   <form>
     <input type="checkbox" name="selection" value="yes">
     <input type="checkbox" name="selection" value="no">
   </form>
+
 </body>
